objects/Snapshot_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Average_Class_Size__c</fullName>
        <label>Average Class Size</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_GPA__c</fullName>
        <label>Average GPA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Behavior_Points__c</fullName>
        <label>Behavior Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to related cohort object</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Snapshot Summaries</relationshipLabel>
        <relationshipName>Snapshot_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Service_Hours__c</fullName>
        <label>Community Service Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Snapshot Summaries</relationshipLabel>
        <relationshipName>Snapshot_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Earned_Career__c</fullName>
        <label>Credit Earned Career</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Earned_YTD__c</fullName>
        <label>Credit Earned YTD</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <label>Daily Attendance %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Excused_Absences__c</fullName>
        <label>Excused Absences</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excused_Tardies__c</fullName>
        <label>Excused Tardies</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Breakfasts__c</fullName>
        <label>Free Breakfasts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Lunches__c</fullName>
        <label>Free Lunches</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Price_Breakfasts__c</fullName>
        <label>Full Price Breakfasts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Price_Lunches__c</fullName>
        <label>Full Price Lunches</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_School_Suspension_Days__c</fullName>
        <label>In School Suspension Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_School_Suspensions__c</fullName>
        <label>In School Suspensions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructional_Time_Lost__c</fullName>
        <label>Instructional Time Lost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negative_Behavior__c</fullName>
        <label>Negative Behavior Incidents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neutral_Behavior__c</fullName>
        <label>Neutral Behavior Incidents</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_School_Suspension_Days__c</fullName>
        <label>Out of School Suspension Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_School_Suspensions__c</fullName>
        <label>Out of School Suspensions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paycheck_Points__c</fullName>
        <label>Paycheck Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Excused_Absences__c</fullName>
        <label>Percent Excused Absences</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Excused_Tardies__c</fullName>
        <label>Percent Excused Tardies</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Unexcused_Absences__c</fullName>
        <label>Percent Unexcused Absences</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Unexcused_Tardies__c</fullName>
        <label>Percent Unexcused Tardies</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Positive_Behavior__c</fullName>
        <label>Positive Behavior Incidents</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduced_Price_Breakfasts__c</fullName>
        <label>Reduced Price Breakfasts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reduced_Price_Lunches__c</fullName>
        <label>Reduced Price Lunches</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reenrollment_Rate__c</fullName>
        <label>Reenrollment Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Snapshot Summaries</relationshipLabel>
        <relationshipName>Snapshot_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snapshot_ID__c</fullName>
        <label>Snapshot ID</label>
        <referenceTo>Snapshot_Log__c</referenceTo>
        <relationshipLabel>Snapshot Summaries</relationshipLabel>
        <relationshipName>Snapshot_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Teacher_Ratio__c</fullName>
        <label>Student Teacher Ratio</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Snapshot Summaries</relationshipLabel>
        <relationshipName>Snapshot_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Students_droppedout_from_original_list__c</fullName>
        <label>Students droppedout from original list</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Students_retained_from_original_list__c</fullName>
        <label>Students retained from original list</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Students_transferred_from_Current_Year__c</fullName>
        <label>Students transferred from Current Year</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Students_transferred_from_original_list__c</fullName>
        <label>Students transferred from original list</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Students_withdrawn_from_original_list__c</fullName>
        <label>Students Withdrawn From Original List</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Summary_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Count_of_Students_today__c</fullName>
        <label>Total Count of Students (today)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Original_Students_In_Cohort__c</fullName>
        <label>Total Original Students In Cohort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Students_In_Cohort__c</fullName>
        <label>Total Students In Cohort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Suspension_Days__c</fullName>
        <formula>In_School_Suspension_Days__c  +  Out_School_Suspension_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total # of Suspension Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unexcused_Absences__c</fullName>
        <label>Unexcused Absences</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unexcused_Tardies__c</fullName>
        <label>Unexcused Tardies</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1907__c</fullName>
        <label>1907</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1908__c</fullName>
        <label>1908</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1909__c</fullName>
        <label>1909</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Students_Net_New__c</fullName>
        <description>Students added to the cohort who were not original members.</description>
        <inlineHelpText>Students added to the cohort who were not original members.</inlineHelpText>
        <label># of Students Net New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Snapshot Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Snapshot Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Summaries</pluralLabel>
    <recordTypes>
        <fullName>Cohort</fullName>
        <active>true</active>
        <description>A simple summary of cohort yearly data</description>
        <label>Cohort</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Summary</fullName>
        <active>true</active>
        <label>School Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Section_Summary</fullName>
        <active>true</active>
        <label>Section Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student_Summary</fullName>
        <active>true</active>
        <label>Student Summary</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>